# SFML_Projects

./: README.md
SnakeGame/: CMakeLists.txt  Fruit.cpp  Fruit.hpp  Game.cpp  Game.hpp  Shape.cpp  Shape.hpp  Snake.cpp  Snake.hpp  main.cpp
practice_english_words/: CMakeLists.txt  Eng_Practice.cpp  Eng_Practice.hpp  main.cpp
practice_english_words/sources/: words.txt
